// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test home section should return the desktop html 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "100%",
      "margin": 0,
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-content-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
    style={
      Object {
        "height": "100%",
        "maxHeight": "inherit",
      }
    }
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 MuiTypography-alignCenter"
    >
      Deborah Brandão
    </h1>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-8"
    style={
      Object {
        "border": "1px solid grey",
        "height": "100%",
        "padding": 0,
      }
    }
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "height": "100%",
          "maxHeight": null,
          "maxWidth": null,
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        aria-hidden={true}
        style={
          Object {
            "paddingBottom": "NaN%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source />
        <img
          alt=""
          loading="lazy"
          onLoad={[Function]}
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Test home section should return the mobile html 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "100%",
      "margin": 0,
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-content-xs-center MuiGrid-grid-xs-12 MuiGrid-grid-md-4"
    style={
      Object {
        "height": "auto",
        "maxHeight": "140px",
      }
    }
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 MuiTypography-alignLeft"
    >
      Deborah Brandão
    </h1>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-8"
    style={
      Object {
        "border": "1px solid grey",
        "height": "calc(100% - 140px)",
        "padding": 0,
      }
    }
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "height": "100%",
          "maxHeight": null,
          "maxWidth": null,
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        aria-hidden={true}
        style={
          Object {
            "paddingBottom": "NaN%",
            "width": "100%",
          }
        }
      />
      <picture>
        <source />
        <img
          alt=""
          loading="lazy"
          onLoad={[Function]}
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
  </div>
</div>
`;
